--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="row">
                <div class="col-md-10 col-md-offset-1">
                     <div class="col-sm-2">
-                        <div class="image"><img src="../../../../overtime/Downloads/mohy.jpg"></div>
+                        <div class="image"><img src="images/mohy.jpg" alt="profile_image"></div>
                     </div>
                     <div class="col-sm-10">
                         <h2>About</h2>
